# maverick_os

./: .gitignore  Cargo.toml  cache.db
demo/: Cargo.toml  air_cache.db
demo/src/: lib.rs
src/: .air.rs.swp  .hardware.rs.swp  .lib.rs.swp  .runtime.rs.swp  .window.rs.swp  active_record.rs  air.rs  atomic.rs  bluetooth.rs  hardware.rs  lib.rs  notes.rs  notes.txt  runtime.rs  state.rs  test_code.rs  window.rs
src/active_record/: air.rs  field.rs  map.rs  rusqlite.rs
src/examples/: cloud_clear.rs  cloud_get.rs  cloud_remove.rs  cloud_save.rs  copy 2.rs  haptic.rs  open_camera.rs  open_photo_picker.rs  open_unprocessed.rs  paste.rs  push_notifs.rs  register_notifs.rs  safe_area.rs  share.rs  share_image.rs
src/hardware/: .cache.rs.swp  app_support.rs  ble_share.rs  cache.rs  camera.rs  clipboard.rs  cloud.rs  context_menu.rs  dex_loader.rs  flash.rs  haptics.rs  logger.rs  notifications.rs  photo_picker.rs  safe_area.rs  share.rs
src/hardware/bluetooth/: central.rs  central_manager.rs  mod.rs  peripheral.rs  peripheral_connection.rs  report.md
src/hardware/cache/: android.rs  apple.rs  linux.rs  windows.rs
src/hardware/camera/: android.rs  apple 2.rs  apple.rs  apple_custom_image.rs  apple_custom_utils.rs  linux.rs  log.txt  old.rs  windowslinux.rs
src/hardware/camera/apple/: apple_custom_processor.rs  apple_standard_processor.rs  custom 2.rs  custom.rs  standard.rs
src/hardware/clipboard/: android.rs  ios.rs  macos 2.rs  macos.rs
src/hardware/cloud/: android.rs  apple.rs
src/hardware/context_menu/: android.rs  apple.rs  linux.rs  macos.rs  windows.rs
src/hardware/haptics/: apple.rs
src/hardware/notifications/: apple.rs
src/hardware/photo_picker/: apple.rs  ios.rs  linux.rs  macos.rs  windows.rs
src/hardware/share/: android.rs  apple.rs  linux.rs
src/hardware/share/apple/: ios.rs  macos.rs
src/runtime/: channel.rs  inline.rs  service.rs  thread.rs
src/runtime/thread/: service.rs  tasks.rs
