[package]
name = "maverick_os"
version = "0.1.0"
edition = "2024"
authors = ["Caleb Couch <caleb@orange.me>"]
description = "Maverick OS"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/maverick_os"


[dependencies]
air = "0.2.1"
async-trait = "0.1.88"
log = "0.4.27"
raw-window-handle = "0.6.2"
winit = "0.30.11"
serde_json = "1.0.140"
serde = "1.0.219"
hex = "0.4.3"
rand = "0.9.1"
downcast-rs = "2.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = {version="0.34.0", features=["bundled"]}
tokio = {version="1.45.1", features=["rt-multi-thread", "net", "time", "sync"]}

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
cli-clipboard = "0.4.0"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
env_logger = "0.11.6"

[package.metadata.deb]
maintainer-scripts = "debian/"
